--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "bootstrap-table": "^1.23.2",
     "fontawesome": "^5.6.3",
     "npm": "^10.8.2",
     "react": "^18.2.0",
